# internal/application/server/admin.go
@@ -46,3 +46,11 @@ func (a *AdminServer) Businesses(ctx context.Context) ([]domain.Business, error)
 func (a *AdminServer) CreateBusiness(ctx context.Context, business domain.Business) error {
 	return a.businessStore.CreateBusiness(ctx, business)
 }
+
+func (a *AdminServer) DeleteBusiness(ctx context.Context, businessId string) error {
+	panic("TODO: Implement")
+}
+
+func (a *AdminServer) UpdateBusiness(ctx context.Context, business domain.Business) error {
+	panic("TODO: Implement")
+}
